--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,8 @@
 <body>
   <div>
     <h4 id="list-header">Try A Sequence:</h4>
+    <div>(Accel = Cmd on Mac, Ctrl everywhere else)</div>
+    <div>(This example assumes a US English keyboard)</div>
     <div id="list-host"></div>
   </div>
   <div>
